Fixed alt text visibilty for all icons

--- a/src/components/Position/style.css
+++ b/src/components/Position/style.css
@@ -38,7 +38,6 @@
     border: none;
     padding: 0;
     margin: 0;
-    font-size: 0;
     cursor: pointer;
 }
 .currency-exchange__icon {
@@ -50,7 +49,11 @@
     text-transform: uppercase;
 }
 .currency-exchange__link {
-    font-size: 0;
+    color: rgb(0, 0, 0);
+}
+.currency-exchange__link:hover,
+.currency-exchange__link:focus {
+    text-decoration: none;
 }
 .currency-exchange__currencies {
     font-size: 25px;
